fix quiz alignment for Arabic

--- a/experiments/from-scratch/client/main.less
+++ b/experiments/from-scratch/client/main.less
@@ -209,6 +209,15 @@
 
 }
 
+.quiz_rtl {
+      .RadioGroup { 
+        .label {
+          position:relative;
+          padding:50px;
+        }  
+      }
+}
+
 .exit-survey {
   em {
     color: blue;
